# MCP-server-template

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  shell.nix
config/: credentials.toml.example
mcp-server-macros/: Cargo.toml
mcp-server-macros/src/: lib.rs
src/: lib.rs  main.rs
src/auth/: error.rs  loader.rs  middleware.rs  mod.rs  types.rs
src/tools/: get_time.rs  mod.rs
tests/: auth_loader_tests.rs  auth_middleware_tests.rs  auth_tests.rs  integration_tests.rs  lib_tests.rs  tools_proptest.rs  tools_tests.rs
tests/common/: mod.rs
