[package]
name = "mcp-server-macros"
version = "0.2.0"
edition = "2024"
authors = ["Adrian Jastrzębski <business@quantdevlabs.com>"]
description = "Procedural macros for MCP server tool registration"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
